--- a/src/utils/Carousel.css
+++ b/src/utils/Carousel.css
@@ -1,4 +1,4 @@
-.swiper-pagination {
+/* .swiper-pagination {
 	position: absolute;
 	top: 0px;
 	right: 10px;
@@ -23,4 +23,16 @@
 .swiper-pagination-bullet-active {
   color: #fff;
   background: #007aff;
+} */
+
+/* .swiper-slide {
+  background-size: cover;
+  background-position: center;
 }
+
+.swiper-container {
+  width: 100%;
+  height: 300px;
+  margin-left: auto;
+  margin-right: auto;
+} */
